fix css overflow

--- a/bwa/src/components/about/about.scss
+++ b/bwa/src/components/about/about.scss
@@ -1,7 +1,31 @@
 @import "../../global.scss";
 
 .about{
-  background-color: red;
+  background-color: #262626;
   height: 100vh;
   font-family: 'Roboto', sans-serif;
+  overflow-wrap: break-word;
+  #content {
+    display: grid;
+    grid-template-columns: (4, 25%);
+    grid-template-rows: (4, 25%);
+    // margin: 0 auto;
+    height: 100%;
+  }
+  .one{
+    grid-column: 1/3;
+    grid-row: 1/3;
+    background: #262626;
+  }
+  .two{
+    grid-column: 1/3;
+    grid-row: 3/5;
+    background: #262626;
+  }
+  .three{
+    grid-column: 3/5;
+    grid-row: 1/5;
+    background: url("../../../public/assets/picnic.png") center center;
+    background-size: cover;
+  }
 }
